--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                 <div class="logo-text">WAKANDA </div>
             </div>
             <ul class="nav-links">
-                <li><<a href="#home" onclick="goBack()">Home</a></li>
+                <li><a href="#home" onclick="goBack()">Home</a></li>
                 <li><a href="#branches" onclick="goBack()">Branches</a></li>
                 <li><a href="#about" onclick="goBack()">About Us</a></li>
                 <li><a href="#contact" onclick="goBack()">Contact Us</a></li>
