--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ const branches = [
       },
       siblingsOffer: "2 siblings = 800 EGP"
     },
-    whatsapp: "https://wa.me/1234567890"
+    whatsapp: "https://wa.me/+201221393940"
   },
   {
     id: 2,
